AÃ±adir keywords: limpieza Madrid, Aranjuez, limpieza por horas, limpieza de casas y obras

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <link rel="apple-touch-icon" href="/vite.svg" />
     
     <!-- SEO Meta Tags -->
-    <title>Relucia - Servicios de Limpieza Profesional en Madrid | Limpieza por Horas</title>
-    <meta name="description" content="Relucia ofrece servicios profesionales de limpieza por horas en Madrid. Limpieza de casas, post-obra y más. Llegamos a todo Madrid. Contacta por WhatsApp." />
-    <meta name="keywords" content="limpieza Madrid, limpieza por horas, limpieza casas, limpieza post obra, servicios limpieza Madrid" />
+    <title>Relucia - Limpieza Madrid y Aranjuez | Limpieza por Horas | Limpieza de Casas y Obras</title>
+    <meta name="description" content="Relucia ofrece servicios profesionales de limpieza por horas en Madrid y Aranjuez. Limpieza de casas, limpieza de obras, limpieza post-obra y más. Llegamos a toda la Comunidad de Madrid. Contacta por WhatsApp." />
+    <meta name="keywords" content="limpieza Madrid, limpieza Aranjuez, limpieza por horas, limpieza por horas Madrid, limpieza de casas, limpieza de casas Madrid, limpieza obras, limpieza post obra Madrid, limpieza post obra Aranjuez, servicios limpieza profesional Madrid" />
     <meta name="author" content="Relucia" />
     <meta name="robots" content="index, follow" />
     
@@ -48,7 +48,7 @@
       "@id": "https://www.relucia.es/#organization",
       "name": "Relucia",
       "alternateName": "Relucia Limpieza Profesional",
-      "description": "Servicios profesionales de limpieza por horas en Madrid. Especialistas en limpieza de casas, post-obra, oficinas y limpieza profunda.",
+      "description": "Servicios profesionales de limpieza por horas en Madrid y Aranjuez. Especialistas en limpieza de casas, limpieza de obras, limpieza post-obra, oficinas y limpieza profunda.",
       "url": "https://www.relucia.es",
       "logo": "https://www.relucia.es/logo.png",
       "image": "https://www.relucia.es/og-image.jpg",
@@ -66,11 +66,18 @@
         "latitude": "40.4168",
         "longitude": "-3.7038"
       },
-      "areaServed": {
-        "@type": "City",
-        "name": "Madrid",
-        "sameAs": "https://es.wikipedia.org/wiki/Madrid"
-      },
+      "areaServed": [
+        {
+          "@type": "City",
+          "name": "Madrid",
+          "sameAs": "https://es.wikipedia.org/wiki/Madrid"
+        },
+        {
+          "@type": "City",
+          "name": "Aranjuez",
+          "sameAs": "https://es.wikipedia.org/wiki/Aranjuez"
+        }
+      ],
       "serviceType": [
         "Limpieza de Casas",
         "Limpieza Post-Obra",
@@ -111,10 +118,16 @@
       "provider": {
         "@id": "https://www.relucia.es/#organization"
       },
-      "areaServed": {
-        "@type": "City",
-        "name": "Madrid"
-      },
+      "areaServed": [
+        {
+          "@type": "City",
+          "name": "Madrid"
+        },
+        {
+          "@type": "City",
+          "name": "Aranjuez"
+        }
+      ],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Servicios de Limpieza",
@@ -155,7 +168,7 @@
       }
     }
     </script>
-    <script type="module" crossorigin src="/assets/js/index-Dsp5qw3A.js"></script>
+    <script type="module" crossorigin src="/assets/js/index-BJyHx4Tx.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/js/react-vendor-CUZ4QSeP.js">
     <link rel="modulepreload" crossorigin href="/assets/js/icons-BNRelVN0.js">
     <link rel="stylesheet" crossorigin href="/assets/css/index-rBT-c5cH.css">
