Optimizaciones SEO y rendimiento completas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/logo-relucia.svg" />
     <link rel="apple-touch-icon" href="/logo-relucia.svg" />
+    <link rel="shortcut icon" href="/logo-relucia.svg" />
     
     <!-- SEO Meta Tags -->
     <title>Relucia - Limpieza Madrid y Aranjuez | Limpieza por Horas | Limpieza de Casas y Obras</title>
