Simplificar: Eliminar Supabase, solo WhatsApp

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,8 @@
     <link rel="icon" type="image/svg+xml" href="/logo-relucia.svg" />
     <link rel="apple-touch-icon" href="/logo-relucia.svg" />
     <link rel="shortcut icon" href="/logo-relucia.svg" />
+    <!-- Favicon inline como fallback -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24.72 21.89'%3E%3Cpolygon fill='%23139097' points='16.95 .03 12.13 8.55 16.12 15.23 24.72 .03 16.95 .03'/%3E%3Cpolygon fill='%2320bec6' points='16.45 14.63 12.36 21.89 0 .03 7.85 0 16.45 14.63'/%3E%3C/svg%3E" />
     
     <!-- SEO Meta Tags -->
     <title>Relucia - Limpieza Madrid y Aranjuez | Limpieza por Horas | Limpieza de Casas y Obras</title>
