Corregir .htaccess y favicon para resolver errores 403/404

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/logo-relucia.svg" />
+    <link rel="icon" type="image/x-icon" href="/logo-relucia.svg" />
     <link rel="apple-touch-icon" href="/logo-relucia.svg" />
     <link rel="shortcut icon" href="/logo-relucia.svg" />
     <!-- Favicon inline como fallback -->
